2003-05-13  Rajesh Vaidheeswarran  <rv@gnu.org>

	* whitespace.el (whitespace-global-mode): Add :link entry
	  to the commentary section in whitespace.el

2003-05-13  Nick Roberts  <nick@nick.uklinux.net>

	* gdb-ui.el (gdb-invalidate-assembler): Update assembler buffer
	correctly when frame changes.
	(gdb-info-threads-custom, gdb-threads-buffer-name) 
	(gdb-display-threads-buffer, gdb-frame-threads-buffer) 
	(gdb-threads-mode-map, gdb-threads-mode, gdb-get-thread-number) 
	(gdb-threads-select, gdb-threads-mouse-select): New functions and
	variable for a buffer that provides a selectable threads list.

2003-05-11  Kevin Ryde  <user42@zip.com.au>

	* info-look.el (info-lookup-make-completions): Allow colons in index
	entries by looking for ": " to terminate, as per latest info.el.

2003-05-11  Stefan Monnier  <monnier@cs.yale.edu>

	* vc-mcvs.el (vc-mcvs-command): Filter output of `status'.
	(vc-mcvs-state, vc-mcvs-dir-state, vc-mcvs-print-log, vc-mcvs-diff):
	Change dir so that the filtered output of `mcvs makes sense.
	(vc-mcvs-mode-line-string): Handle the case where CVS is desync'd.
	(vc-mcvs-diff-tree): Don't bother with the local-diff code.
	(vc-mcvs-create-snapshot): Use `branch' and `switch'.

2003-05-10  Stefan Monnier  <monnier@cs.yale.edu>

	* newcomment.el (comment-indent): Try to align to adjacent comments.
	(comment-with-narrowing): Actually use the arguments.
	(comment-valid-prefix-p): Rename from comment-valid-prefix
	and fix to actually use its argument.

	* tex-mode (tex-mode-syntax-table): ~ is not whitespace.
	(tex-guess-mode): Add `renewcommand'.
	(tex-mode): Move the autoload to get the correct docstring and usage.

	* uniquify.el (uniquify-rationalize-file-buffer-names):
	Refresh the dirname in the case that rename-buffer was skipped.
	(uniquify-buffer-file-name): Return a dirname with no trailing slash.

	* mail/smtpmail.el (smtpmail-send-queued-mail): Use point-at-bol
	instead of forward-line.

2003-05-10  Oliver Scholz  <alkibiades@gmx.de>
